[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dexcom_reader_ML"
version = "0.1.0"
description = "A Dexcom glucose monitoring and alerting system with multiple time-scale viewers, trendline, machine learning predicted future glucose readings, and Home Assistant alerting"
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }

authors = [
  { name = "Jaderic Dawson", email = "jadericdawson@gmail.com" }
]

dependencies = [
  "matplotlib>=3.5.0",
  "numpy>=1.21.0",
  "pandas>=1.3.0",
  "pydexcom>=0.3.0",
  "pytz>=2021.1",
  "python-dotenv>=0.20.0",
  "requests>=2.26.0",
  "torch>=1.9.0",          # For the PyTorch-based Transformer model
  "scikit-learn>=0.24.0",  # For MinMaxScaler and other preprocessing
  "tkinter"                # GUI framework (built-in in Python but explicitly stated)
]

[tool.setuptools]
packages = ["dexcom_reader"]

[project.scripts]
dexcom_reader = "dexcom_reader.__main__:main"

[project.urls]
"Homepage" = "https://github.com/jadericdawson/dexcom_reader"
"Source Code" = "https://github.com/jadericdawson/dexcom_reader_ML"
"Bug Tracker" = "https://github.com/jadericdawson/dexcom_reader_ML/issues"

[tool.setuptools.package-data]
"*" = ["*.csv", "*.json", "*.env", "*.pt", "*.pkl"]

